--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --allow-net --allow-read --allow-env --watch server.ts",
-    "start": "deno run --allow-net --allow-read --allow-env server.ts"
+    "dev": "deno run --allow-net --allow-read --allow-env --watch main.ts",
+    "start": "deno run --allow-net --allow-read --allow-env main.ts"
   },
   "compilerOptions": {
     "lib": ["deno.window", "dom"]
