moved api to workspace

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
+  "workspace": ["./api"],
   "tasks": {
-    "dev": "deno run --allow-net --allow-read --allow-env --watch main.ts",
-    "start": "deno run --allow-net --allow-read --allow-env main.ts"
+    "dev": "deno run --allow-net --allow-read --allow-env --watch api/main.ts",
+    "start": "deno run --allow-net --allow-read --allow-env api/main.ts"
   },
   "compilerOptions": {
     "lib": ["deno.window", "dom"]
