--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "workspace": ["./api"],
+  "workspace": ["./api", "./ui"],
   "tasks": {
     "dev": "deno run --allow-net --allow-read --allow-env --watch api/main.ts",
     "start": "deno run --allow-net --allow-read --allow-env api/main.ts"
