Integrate global store with Storefront components
Added a browser-native global state management service (`store.js`) and integrated it with Storefront web components. StorefrontButtonGroupButton now updates the global store on selection change. New demo and test files (`StorefrontStoreDemo.html`, `store-test.html`) showcase real-time state updates. Updated documentation and example usage to reflect store integration.

--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,9 @@
     "dev": "deno run --allow-net --allow-read --allow-env --watch api/main.ts",
     "start": "deno run --allow-net --allow-read --allow-env api/main.ts"
   },
+  "imports": {
+    "idb": "npm:idb@^8.0.0"
+  },
   "compilerOptions": {
     "lib": ["deno.window", "dom"]
   }
